replaced tycho by simple maven surefire mojo